Organização do diretório do projeto

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="pt-4">
             <div class="inline-flex gap-4 absolute right-7 items-center">
                 <a href="" class="header_text text_shadow">Sobre Mim</a>
-                <a href="" class="header_text text_shadow">Git Hub</a>
+                <a href="https://github.com/ruanllima" target="_blank" rel="noopener noreferrer" class="header_text text_shadow">Git Hub</a>
                 <a href="" class="header_text text_shadow">Linkedin</a>
         </div>
         </div>
@@ -103,8 +103,9 @@
         </div>
 
         <div class="mt-56 px-8 md:px-16 lg:px-32 xl:px-24">
+
             <!--Cursos-->
-            <div class="flex flex-wrap gap-4 justify-center">
+            <div id="cursos1" class="flex flex-wrap gap-4 justify-center">
                 <div class="bg-white rounded-md rounded-br-sm rounded-tl-3xl w-[32rem] h-[10rem] px-4 grid grid-cols-3 items-center mx-[1px]">
                     <div class="col-span-2">
                         <h1 class="font-semibold text-lg text-slate-900">Programação Básica</h1>
@@ -135,7 +136,7 @@
                 <hr class="text-transparent w-[66rem] mt-2 mb-2">
             </div>
         
-            <div class="flex flex-wrap gap-4 justify-center">
+            <div id="cursos2" class="flex flex-wrap gap-4 justify-center">
                 <div class="bg-white rounded-md rounded-bl-3xl rounded-tr-sm w-[32rem] h-[10rem] px-4 grid grid-cols-3 items-center mx-[1px]">
                     <div class="col-span-2">
                         <h1 class="font-semibold text-lg text-slate-900 w-60">Bootcamp | Python Ciência de Dados</h1>
