--- a/index.html
+++ b/index.html
@@ -200,26 +200,35 @@
                     Visualizar todos os certificados</button>
             </div>
 
-            <div id="certificados" class="flex place-content-center">
+            <div class="flex place-content-center">
                 <div class="fixed inset-0 bg-black/70 flex items-center justify-center backdrop-blur-xs"></div>
-                <div class="bg-slate-100 top-10 max-h-screen overflow-y-auto h-auto w-auto absolute grid grid-cols-4 gap-8 mx-16 mt-6 px-16 py-12 rounded-xl">
-                    <img src="/src/media/certificados/cert_nes.jpg" alt="Programação Básica NES" class="certificado" class="certificado">
-                    <img src="/src/media/certificados/cert_sql1.jpg" alt="SQL DIO" class="certificado">
-                    <img src="/src/media/certificados/cert_python.jpg" alt="Ciência de Dados Python" class="certificado">
-                    <img src="/src/media/certificados/cert_sql2.jpg" alt="Certificado MySQL" class="certificado">
-                    <img src="/src/media/certificados/cert_mandacaru.jpg" alt="Prata Olimpíada Mandacaru de Matemática" class="certificado">
-                    <img src="/src/media/certificados/cert_obmep1.jpg" alt="Menção Honrosa OBMEP 2019" class="certificado">
-                    <img src="/src/media/certificados/cert_obmep2.jpg" alt="Menção Honrosa OBMEP 2021" class="certificado">
-                    <img src="/src/media/certificados/cert_obmep3.jpg" alt="Menção Honrosa OBMEP 2022" class="certificado">
-                    <img src="/src/media/certificados/cert_oamep.jpg" alt="Bronze OAMEP" class="certificado">
-                    <img src="/src/media/certificados/cert_logica1.jpg" alt="Bronze Maratona de Lógica" class="certificado">
-                    <img src="/src/media/certificados/cert_logica2.jpg" alt="Prata Maratona de Lógica" class="certificado">
-                    <img src="/src/media/certificados/cert_fgv.jpg" alt="Seleção de Talentos FGV" class="certificado">
-                    <img src="/src/media/certificados/cert_startup.jpg" alt="SEBRAE Startup Day" class="certificado">
-                    <img src="/src/media/certificados/cert_campus.jpg" alt="Campus Party Nordeste 2024" class="certificado">
-                    <img src="/src/media/certificados/cert_dlj.jpg" alt="Desafio Liga Jovem 2024" class="certificado">
-                    <img src="/src/media/certificados/cert_eba.jpg" alt="EBA 2024" class="certificado">
-                    <img src="/src/media/certificados/cert_startup2.jpg" alt="Startup Mundi Game Experience" class="certificado">
+                <div class="bg-slate-100 top-10 bottom-16 max-h-screen overflow-y-auto h-[50rem] w-[76rem] absolute mx-16 mt-6 px-16 py-12 rounded-xl">
+                    <div id="certificados" class="grid grid-cols-4 gap-8">
+                        <img style="cursor: pointer;" id="nes" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_nes.jpg" alt="Programação Básica NES" class="certificado">
+                        <img style="cursor: pointer;" id="slq1" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_sql1.jpg" alt="SQL DIO" class="certificado">
+                        <img style="cursor: pointer;" id="python"  onclick="view_certificate(this.id)" src="/src/media/certificados/cert_python.jpg" alt="Ciência de Dados Python" class="certificado">
+                        <img style="cursor: pointer;" id="sql2" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_sql2.jpg" alt="Certificado MySQL" class="certificado">
+                        <img style="cursor: pointer;" id="mandacaru" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_mandacaru.jpg" alt="Prata Olimpíada Mandacaru de Matemática" class="certificado">
+                        <img style="cursor: pointer;" id="obmep1" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_obmep1.jpg" alt="Menção Honrosa OBMEP 2019" class="certificado">
+                        <img style="cursor: pointer;" id="omep2" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_obmep2.jpg" alt="Menção Honrosa OBMEP 2021" class="certificado">
+                        <img style="cursor: pointer;" id="obmep3" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_obmep3.jpg" alt="Menção Honrosa OBMEP 2022" class="certificado">
+                        <img style="cursor: pointer;" id="oamep" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_oamep.jpg" alt="Bronze OAMEP" class="certificado">
+                        <img style="cursor: pointer;" id="logica1" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_logica1.jpg" alt="Bronze Maratona de Lógica" class="certificado">
+                        <img style="cursor: pointer;" id="logica2" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_logica2.jpg" alt="Prata Maratona de Lógica" class="certificado">
+                        <img style="cursor: pointer;" id="fgv" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_fgv.jpg" alt="Seleção de Talentos FGV" class="certificado">
+                        <img style="cursor: pointer;" id="startup1" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_startup1.jpg" alt="SEBRAE Startup Day" class="certificado">
+                        <img style="cursor: pointer;" id="campus" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_campus.jpg" alt="Campus Party Nordeste 2024" class="certificado">
+                        <img style="cursor: pointer;" id="dlj" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_dlj.jpg" alt="Desafio Liga Jovem 2024" class="certificado">
+                        <img style="cursor: pointer;" id="eba" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_eba.jpg" alt="EBA 2024" class="certificado">
+                        <img style="cursor: pointer;" id="startup2" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_startup2.jpg" alt="Startup Mundi Game Experience" class="certificado">
+                    </div>
+
+                    <div id="view_container" class="flex place-content-center">
+                        <button id="left" onclick="change_certificate(this.id)"><img src="/src/media/seta.png" alt="" class="h-24 absolute top-64 left-20 rotate-180 opacity-15"></button>
+                        <button id="right" onclick="change_certificate(this.id)"><img src="/src/media/seta.png" alt="" class="h-24 absolute top-64 right-20 opacity-15"></button>
+                        <img id="view" src="" class="certificado h-[34rem]">
+                    </div>
+                    
                 </div>
                 <button onclick="view('certificados')" class=" absolute top-20 left-20 transition_button "><img src="/src/media/voltar.png" alt="" class="h-8 opacity-20"></button>
             </div>
