--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
 <body class="">
     <section id="init" class="h-[103vh] relative bg-gradient-to-bl from-[#3505e3] to-[#6800fa]">
         <img src="/src//media/BACK.jpg" alt="" class="absolute bottom-0 h-full min-h-screen w-screen opacity-24 parallax">
-        <img src="/src/media/font_ruan.png" alt="" class="absolute -top-14 left-7 h-48 ">
+        <div class="absolute left-10 top-2 shadow-xs">
+            <h1 class="text-white text-6xl font-cherolina">Ruan Lima</h1>
+        </div>
         <div class="inline-flex gap-7 absolute top-5 right-9 items-center animate-fade-fall">
 
-                <a href="#sobre" class="header_text text_shadow">Sobre Mim</a>
-                <a href="#formacao" class="header_text text_shadow">Formação Acadêmica</a>
-                <a href="https://github.com/ruanllima" target="_blank" rel="noopener noreferrer" class="header_text text_shadow inline-flex items-center gap-1">
+                <a href="#sobre" class="header_text textShadow2">Sobre Mim</a>
+                <a href="#formacao" class="header_text textShadow2">Formação Acadêmica</a>
+                <a href="https://github.com/ruanllima" target="_blank" rel="noopener noreferrer" class="header_text textShadow2 inline-flex items-center gap-1">
                     <svg class="invert h-5 w-5">
                         <image href="/src/media/GitHub.png" width="100%" height="100%"></image>
                     </svg> Git Hub
                 </a>
         
-                <a href="https://www.linkedin.com/in/ruan-lima-a945a127a/" target="_blank" rel="noopener noreferrer" class="header_text text_shadow inline-flex items-center gap-1">
+                <a href="https://www.linkedin.com/in/ruan-lima-a945a127a/" target="_blank" rel="noopener noreferrer" class="header_text textShadow2 inline-flex items-center gap-1">
                     <svg class="invert h-5 w-5">
                         <image href="/src/media/linkedin.png" width="100%" height="100%"></image>
                     </svg>Linkedin
@@ -37,10 +39,10 @@
         </div>
 
         <div class="">
-            <img src="/src/media/img_perfil.png" alt="Ruan Lima" class="h-[680px] absolute -bottom-16 right-14">
+            <img src="/src/media/img_perfil.png" alt="Ruan Lima" loading="lazy" class="h-[680px] absolute -bottom-16 right-14">
         </div>
         
-        <div class="text-8xl text_shadow">
+        <div class="text-8xl textShadow">
             <h1 id="init1" class="absolute left-10 top-72 font-bold text-slate-100 opacity-0">Welcome to</h1>
             <h1 id="init2" class="absolute left-10 top-96 font-bold text-slate-100 opacity-0">my</h1>
             <h1 id="init3" class="absolute left-52 top-96 font-bold text-[#ffbf00] opacity-0">world.</h1>
