--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             </div>
 
             <div class="flex place-content-center mt-14">
-                <button type="button" onclick="view_tab('certificados', '', '')" class="bg-indigo-600 transition_button hover:bg-[#ff6f00] text-slate-100 font-semibold whitespace-nowrap text-lg rounded-md p-1 px-3">
+                <button type="button" onclick="view_tab('certificados', '', '', 'education')" class="bg-indigo-600 transition_button hover:bg-[#ff6f00] text-slate-100 font-semibold whitespace-nowrap text-lg rounded-md p-1 px-3">
                     Visualizar todos os certificados</button>
             </div>
 
@@ -242,11 +242,11 @@
                     </div>
 
                     <div style="display: none;" id="view_container" class="flex place-content-center">
-                        <button id="left" onclick="change_certificate(this.id)"><img src="/src/media/seta.png" alt="" class="h-24 absolute top-64 left-20 rotate-180 opacity-15"></button>
-                        <button id="right" onclick="change_certificate(this.id)"><img src="/src/media/seta.png" alt="" class="h-24 absolute top-64 right-20 opacity-15"></button>
+                        <button id="left" onclick="change_certificate(this.id)"><img src="/src/media/seta.png" alt="" class="h-24 absolute top-64 left-20 rotate-180 opacity-15 transition hover:scale-105 hover:-translate-x-1"></button>
+                        <button id="right" onclick="change_certificate(this.id)"><img src="/src/media/seta.png" alt="" class="h-24 absolute top-64 right-20 opacity-15 transition hover:scale-105 hover:translate-x-1"></button>
                         <img id="view" src="" class="certificado h-[34rem]">
                     </div>
-                    <button onclick="view_tab('certificados', 'view_container', 'certificados_list')" class=" absolute top-5 left-5 transition_button "><img src="/src/media/voltar.png" alt="" class="h-8 opacity-20"></button>
+                    <button onclick="view_tab('certificados', 'view_container', 'certificados_list', 'education')" class=" absolute top-5 left-5 transition_button "><img src="/src/media/voltar.png" alt="" class="h-8 opacity-20"></button>
 
                 </div>
                 
