Section 'skills': improving design and adding animations

--- a/index.html
+++ b/index.html
@@ -447,10 +447,10 @@
     </section>
     <section id="cta" class="h-auto pb-64 bg-slate-100">
         <div class="flex flex-col place-content-center text-center mx-auto pt-32">
-            <h1 id="cta1" class="text-indigo-600 font-black font-coolvetica text-7xl">Despertei seu interesse?</h1>
-            <h2 id="cta2" class="text-indigo-400 font-light text-3xl pt-7">Sinta-se à vontade para entrar em contato comigo.</h2>
+            <h1 id="cta1" class="text-indigo-600 font-black font-coolvetica text-7xl opacity-0">Despertei seu interesse?</h1>
+            <h2 id="cta2" class="text-indigo-400 font-light text-3xl pt-7 opacity-0">Sinta-se à vontade para entrar em contato comigo.</h2>
 
-            <div id="cta3" class="bg-indigo-100 mx-auto w-2/5 mt-12 rounded-md">
+            <div id="cta3" class="bg-indigo-100 mx-auto w-2/5 mt-12 rounded-md opacity-0">
                 <form action="https://formsubmit.co/ruanlimafn@gmail.com" method="POST" class="flex flex-col place-content-center items-center p-10 mx-auto">
                     <input type="text" name="name" placeholder="Seu nome" required class="input_email">
                     <input type="email" name="email" placeholder="Seu email" required class="input_email">
@@ -458,7 +458,7 @@
                     <input type="text" name="_honey" style="display: none;">
                     <input type="hidden" name="_next" value="http://127.0.0.1:5500">
                     <textarea name="message" rows="5" placeholder="Mensagem" required class="input_email"></textarea>
-                    <button type="submit" class="button_email">Send</button>
+                    <button type="submit" class="button_email mt-2">Send</button>
                 </form>
             </div>
         </div>
