--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             <li class="pt-1 font-light text-md text-slate-600">Presencial</li>
                         </ul>
                     </div>
-                    <button type="button" onclick="view_certificate('certificado_nes', 'course_tab', 'education', 'img_tab')" class="bg-indigo-600 transition_button hover:bg-[#ff6f00] text-slate-100 font-semibold whitespace-nowrap text-md rounded-md h-8 w-auto mr-5">
+                    <button type="button" onclick="view_certificate2('certificado_nes', 'course_tab', 'education', 'img_tab')" class="bg-indigo-600 transition_button hover:bg-[#ff6f00] text-white font-semibold whitespace-nowrap text-md rounded-md h-8 w-auto mr-5">
                         Ver certificado
                     </button>
                 </div>
@@ -170,7 +170,7 @@
                             <li class="pt-1 font-light text-md text-slate-600">Online</li>
                         </ul>
                     </div>
-                    <button type="button" onclick="view_certificate('certificado_sql1','course_tab', 'education', 'img_tab')" class="bg-indigo-600 transition_button hover:bg-[#ff6f00] text-slate-100 font-semibold whitespace-nowrap text-md rounded-md h-8 w-auto mr-5">Ver certificado</button>
+                    <button type="button" onclick="view_certificate2('certificado_sql1','course_tab', 'education', 'img_tab')" class="bg-indigo-600 transition_button hover:bg-[#ff6f00] text-white font-semibold whitespace-nowrap text-md rounded-md h-8 w-auto mr-5">Ver certificado</button>
                 </div>
                 <!--Course three-->
                 <div id="curso3" class="bg-white rounded-md rounded-bl-3xl rounded-tr-sm px-4 py-2 grid grid-cols-3 items-center mx-[1px] opacity-0 hover:scale-105 hover:shadow-xl transition delay-100">
@@ -182,7 +182,7 @@
                             <li class="pt-1 font-light text-md text-slate-600">Online</li>
                         </ul>
                     </div>
-                    <button type="button" onclick="view_certificate('certificado_python', 'course_tab', 'education', 'img_tab')" class="bg-indigo-600 transition_button hover:bg-[#ff6f00] text-slate-100 font-semibold whitespace-nowrap text-md rounded-md h-8 w-auto mr-5">Ver certificado</button>
+                    <button type="button" onclick="view_certificate2('certificado_python', 'course_tab', 'education', 'img_tab')" class="bg-indigo-600 transition_button hover:bg-[#ff6f00] text-white font-semibold whitespace-nowrap text-md rounded-md h-8 w-auto mr-5">Ver certificado</button>
                 </div>
                 <!--Course four-->
                 <div id="curso4" class="bg-white rounded-md rounded-br-3xl rounded-tl-sm px-4 py-2 grid grid-cols-3 items-center mx-[1px] opacity-0 hover:scale-105 hover:shadow-xl transition delay-100">
@@ -194,7 +194,7 @@
                             <li class="pt-1 font-light text-md text-slate-600">Online</li>
                         </ul>
                     </div>
-                    <button type="button" onclick="view_certificate('certificado_sql2', 'course_tab', 'education', 'img_tab')" class="bg-indigo-600 transition_button hover:bg-[#ff6f00] text-slate-100 font-semibold whitespace-nowrap text-md rounded-md h-8 w-auto mr-5">Ver certificado</button>
+                    <button type="button" onclick="view_certificate2('certificado_sql2', 'course_tab', 'education', 'img_tab')" class="bg-indigo-600 transition_button hover:bg-[#ff6f00] text-white font-semibold whitespace-nowrap text-md rounded-md h-8 w-auto mr-5">Ver certificado</button>
                 </div>
 
             </div>
@@ -210,7 +210,7 @@
                 <div class="fixed inset-0 bg-black/70 flex items-center justify-center backdrop-blur-xs z-0"></div>
                 <div class="flex items-center mt-[-30rem] place-content-center z-41 bg-slate-100 relative py-5 rounded-md max-w-[66rem] mx-auto">
                     <img id="img_tab" src="/src/media/certificados/cert_python.jpg" alt="" class="rounded-lg shadow-2xl relative h-[35rem] ">
-                    <button style="cursor: pointer;" onclick="view_certificate('certificado_nes', 'course_tab', 'education', 'img_tab')" class="absolute top-6 left-7 transition_button "><img src="/src/media/voltar.png" alt="" class="h-10 opacity-20"></button>
+                    <button style="cursor: pointer;" onclick="view_certificate2('certificado_nes', 'course_tab', 'education', 'img_tab')" class="absolute top-6 left-7 transition_button "><img src="/src/media/voltar.png" alt="" class="h-10 opacity-20 hover:opacity-30"></button>
                 </div>
             </div>
             
@@ -223,7 +223,7 @@
             <div style="display: none;" id="certificados" class="flex place-content-center">
                 <div class="fixed inset-0 bg-black/70 flex items-center justify-center backdrop-blur-xs"></div>
                 <div class="bg-slate-100 top-10 bottom-16 max-h-screen overflow-y-auto h-[50rem] w-[76rem] absolute px-16 pt-12 pb-16 rounded-xl">
-                    <div id="certificados_list" class="grid grid-cols-4 gap-8">
+                    <div id="certificados_list" class="grid grid-cols-4 gap-8 mx-4">
                         <img style="cursor: pointer;" id="nes" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_nes.jpg" alt="Programação Básica NES" class="certificado">
                         <img style="cursor: pointer;" id="slq1" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_sql1.jpg" alt="SQL DIO" class="certificado">
                         <img style="cursor: pointer;" id="python"  onclick="view_certificate(this.id)" src="/src/media/certificados/cert_python.jpg" alt="Ciência de Dados Python" class="certificado">
@@ -244,11 +244,11 @@
                     </div>
 
                     <div style="display: none;" id="view_container" class="flex place-content-center">
-                        <button id="left" onclick="change_certificate(this.id)"><img src="/src/media/seta.png" alt="" class="h-24 absolute top-64 left-20 rotate-180 opacity-15 transition hover:scale-105 hover:-translate-x-1"></button>
-                        <button id="right" onclick="change_certificate(this.id)"><img src="/src/media/seta.png" alt="" class="h-24 absolute top-64 right-20 opacity-15 transition hover:scale-105 hover:translate-x-1"></button>
-                        <img id="view" src="" class="certificado h-[34rem]">
+                        <button id="left" onclick="change_certificate(this.id)"><img src="/src/media/seta.png" alt="" class="h-24 absolute top-64 left-20 rotate-180 opacity-20 transition hover:opacity-30 hover:scale-110 hover:-translate-x-1"></button>
+                        <button id="right" onclick="change_certificate(this.id)"><img src="/src/media/seta.png" alt="" class="h-24 absolute top-64 right-20 opacity-20 transition hover:opacity-30 hover:scale-110 hover:translate-x-1"></button>
+                        <img id="view" src="" class="rounded-md h-[34rem]">
                     </div>
-                    <button onclick="view_tab('certificados', 'view_container', 'certificados_list', 'education')" class=" absolute top-5 left-5 transition_button "><img src="/src/media/voltar.png" alt="" class="h-8 opacity-20"></button>
+                    <button onclick="view_tab('certificados', 'view_container', 'certificados_list', 'education')" class=" absolute top-5 left-5 transition_button "><img src="/src/media/voltar.png" alt="" class="h-10 opacity-20 hover:opacity-30"></button>
 
                 </div>
                 
