Fixing some bugs in the 'education' section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ruan Lima</title>
+    <title>Ruan Lima | Portfólio</title>
     <link rel="shortcut icon" href="/src/media/icon.ico">
     <link rel="stylesheet" href="/src/css/output.css">
 </head>
@@ -22,7 +22,8 @@
     }
 </style>
 <body class="">
-    <section id="init" class="h-[103vh] relative bg-gradient-to-bl from-[#3505e3] to-[#6800fa]">
+    
+    <section id="home" class="h-[103vh] relative bg-gradient-to-bl from-[#3505e3] to-[#6800fa]">
         <div>
             <div style="background-image: url('/src/media/BACK.jpg');" class="bg-cover bg-center h-[103vh] opacity-30 parallax"></div>
         </div>
@@ -153,7 +154,7 @@
                         <ul class="list-disc pl-6">
                             <li class="pt-1 font-light text-md text-slate-600">UFAL - Novo Ensino Suplementar</li>
                             <li class="pt-1 font-light text-md text-slate-600">400 Horas</li>
-                            <li class="pt-1 font-light text-md text-slate-600">Presencial</li>
+                            <li class="pt-1 font-light text-md text-slate-600">02/2023 - 12/2024</li>
                         </ul>
                     </div>
                     <button type="button" onclick="view_certificate2('certificado_nes', 'course_tab', 'education', 'img_tab')" class="bg-indigo-600 transition_button hover:bg-[#ff6f00] text-white font-semibold whitespace-nowrap text-md rounded-md h-8 w-auto mr-5">
@@ -167,7 +168,7 @@
                         <ul class="list-disc pl-6">
                             <li class="pt-1 font-light text-md text-slate-600">DIO</li>
                             <li class="pt-1 font-light text-md text-slate-600">36 Horas</li>
-                            <li class="pt-1 font-light text-md text-slate-600">Online</li>
+                            <li class="pt-1 font-light text-md text-slate-600">07/2023 - 08/2023</li>
                         </ul>
                     </div>
                     <button type="button" onclick="view_certificate2('certificado_sql1','course_tab', 'education', 'img_tab')" class="bg-indigo-600 transition_button hover:bg-[#ff6f00] text-white font-semibold whitespace-nowrap text-md rounded-md h-8 w-auto mr-5">Ver certificado</button>
@@ -179,7 +180,7 @@
                         <ul class="list-disc pl-6">
                             <li class="pt-1 font-light text-md text-slate-600">DIO</li>
                             <li class="pt-1 font-light text-md text-slate-600">80 Horas</li>
-                            <li class="pt-1 font-light text-md text-slate-600">Online</li>
+                            <li class="pt-1 font-light text-md text-slate-600">06/2023 - 08/2023</li>
                         </ul>
                     </div>
                     <button type="button" onclick="view_certificate2('certificado_python', 'course_tab', 'education', 'img_tab')" class="bg-indigo-600 transition_button hover:bg-[#ff6f00] text-white font-semibold whitespace-nowrap text-md rounded-md h-8 w-auto mr-5">Ver certificado</button>
@@ -191,7 +192,7 @@
                         <ul class="list-disc pl-6">
                             <li class="pt-1 font-light text-md text-slate-600">Curso em Vídeo</li>
                             <li class="pt-1 font-light text-md text-slate-600">40 Horas</li>
-                            <li class="pt-1 font-light text-md text-slate-600">Online</li>
+                            <li class="pt-1 font-light text-md text-slate-600">07/2023 - 08/2023</li>
                         </ul>
                     </div>
                     <button type="button" onclick="view_certificate2('certificado_sql2', 'course_tab', 'education', 'img_tab')" class="bg-indigo-600 transition_button hover:bg-[#ff6f00] text-white font-semibold whitespace-nowrap text-md rounded-md h-8 w-auto mr-5">Ver certificado</button>
@@ -209,7 +210,7 @@
             <div style="display: none;" id="course_tab">
                 <div class="fixed inset-0 bg-black/70 flex items-center justify-center backdrop-blur-xs z-0"></div>
                 <div class="flex items-center mt-[-30rem] place-content-center z-41 bg-slate-100 relative py-5 rounded-md max-w-[66rem] mx-auto">
-                    <img id="img_tab" src="/src/media/certificados/cert_python.jpg" alt="" class="rounded-lg shadow-2xl relative h-[35rem] ">
+                    <img id="img_tab" src="" alt="" class="rounded-lg shadow-2xl relative h-[35rem] ">
                     <button style="cursor: pointer;" onclick="view_certificate2('certificado_nes', 'course_tab', 'education', 'img_tab')" class="absolute top-6 left-7 transition_button "><img src="/src/media/voltar.png" alt="" class="h-10 opacity-20 hover:opacity-30"></button>
                 </div>
             </div>
