--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
 
         <div class="max-sm:text-6xl text-8xl textShadow">
-            <h1 id="init1" class="absolute left-10 top-72 max-sm:top-56 max-sm:left-6 font-bold text-slate-100 opacity-0">Welcome to</h1>
-            <div class="inline-flex absolute left-10 top-96 max-sm:top-72 max-sm:left-6s gap-6">
+            <h1 id="init1" class="absolute left-10 top-72 max-sm:top-40 max-sm:left-6 font-bold text-slate-100 opacity-0">Welcome to</h1>
+            <div class="inline-flex absolute left-10 top-96 max-sm:top-52 max-sm:left-6 gap-6">
                 <h1 id="init2" class="font-bold text-slate-100 opacity-0">my</h1>
                 <h1 id="init3" class=" font-bold text-[#ffbf00] opacity-0">world.</h1>
             </div>
