--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <p class="font-light text-slate-500 text-lg mt-2">Sou um jovem de 18 anos, residente no estado de Alagoas, Brasil, apaixonado por música, tecnologia e inovação e busco constantemente aprender e explorar novas áreas do conhecimento. Frequentei a maior parte da minha vida escolar em instituições públicas, mas isso não foi um impedimento para me destacar nas ciências exatas ou tecnológicas. Mesmo após terminar o ensino médio, continuo focado em adquirir novos conhecimentos e me aprimorar ainda mais na programação.
                     </p>
                 </div>
-                <img id="img_about1" src="/src/media/IMG1.jpg" alt="Campus Party Nordeste 2024" class="hidden max-sm:flex h-[30rem] rounded-lg max-w-[60rem] opacity-0">
+                <img id="img_about1" src="/src/media/IMG1.jpg" alt="Campus Party Nordeste 2024" class="hidden max-sm:flex h-[28rem] rounded-lg opacity-0">
 
             </div>
 
@@ -476,7 +476,7 @@
                                 <!--Unity-->
                                 <div id="unity_skill" style="cursor: pointer;" onclick="card_skill('unity_skill_1', 'unity_skill_2', 'unity_skill')" class="bg-slate-800 skill_grid relative opacity-0">
                                     <img id="unity_skill_1" src="/src/media/skills/unity-logo.png" alt="" class="h-10 max-sm:h-7 absolute bottom-2 left-3 invert">
-                                    <p id="unity_skill_2" style="display: none;" class="font-light text-indigo-100/90 absolute px-2 text-[15.6px] max-sm:text-[9px] top-3 max-sm:top-2">Compreesão da estrutura e funcionamento além de experiência prática.</p>
+                                    <p id="unity_skill_2" style="display: none;" class="font-light text-indigo-100/90 absolute px-2 text-[15.6px] max-sm:text-[8.7px] top-3 max-sm:top-2">Compreesão da estrutura e funcionamento além de experiência prática.</p>
                                 </div>
                                 <!--English-->
                                 <div id="english_skill" style="cursor: pointer;" onclick="card_skill('english_skill_1', 'english_skill_2', 'english_skill')" class="bg-[#ff0000] skill_grid relative opacity-0">
@@ -516,10 +516,10 @@
 
     <section id="cta" class="h-auto pb-36 bg-slate-100">
         <div class="flex flex-col place-content-center text-center mx-auto pt-32">
-            <h1 id="cta1" class="text-indigo-600 font-black font-coolvetica text-7xl opacity-0">Despertei seu interesse?</h1>
-            <h2 id="cta2" class="text-indigo-400 font-light text-3xl pt-7 opacity-0">Sinta-se à vontade para entrar em contato comigo.</h2>
+            <h1 id="cta1" class="text-indigo-600 font-black font-coolvetica text-7xl max-sm:text-5xl opacity-0">Despertei seu interesse?</h1>
+            <h2 id="cta2" class="text-indigo-400 font-light text-3xl max-sm:text-base pt-7 opacity-0">Sinta-se à vontade para entrar em contato comigo.</h2>
 
-            <div id="cta3" class="bg-slate-200/45 mx-auto w-2/5 mt-12 rounded-md opacity-0">
+            <div id="cta3" class="bg-slate-200/45 mx-auto w-2/5 max-sm:w-screen mt-12 rounded-md opacity-0">
                 <form action="https://formsubmit.co/ruanlimafn@gmail.com" method="POST" class="flex flex-col place-content-center items-center p-10 mx-auto">
                     <input type="text" name="name" placeholder="Seu nome" required class="input_email">
                     <input type="email" name="email" placeholder="Seu email" required class="input_email">
@@ -535,9 +535,9 @@
     </section>
 
     <section id="contact" class="h-[15rem] bg-slate-900 flex-col text-center ">
-        <div class="inline-flex gap-5 items-center mt-24">
+        <div class="inline-flex max-sm:flex max-sm:flex-col gap-5 items-center mt-24 max-sm:mt-0 max-sm:p-12">
             <button class="bg-slate-950 rounded-full px-5 py-2 flex items-center hover:-translate-y-1 hover:bg-black/67">
-                <a href="https://github.com/ruanllima" target="_blank" rel="noopener noreferrer" class="font-nexa text-slate-100 inline-flex items-center gap-1">
+                <a href="https://github.com/ruanllima" target="_blank" rel="noopener noreferrer" class="font-nexa max-sm:font-light  text-slate-100 inline-flex items-center gap-1 max-sm:text-xs">
                     <svg class="invert h-5 w-5">
                         <image href="/src/media/GitHub.png" width="100%" height="100%"></image>
                     </svg> Git Hub
@@ -545,18 +545,18 @@
             </button>
 
             <button class="bg-slate-950 rounded-full px-5 py-2 flex items-center hover:-translate-y-1 hover:bg-black/67">
-                <a href="https://www.linkedin.com/in/ruan-lima-a945a127a/" target="_blank" rel="noopener noreferrer" class="font-nexa text-slate-100 inline-flex items-center gap-1">
-                    <svg class="invert h-5 w-5">
+                <a href="https://www.linkedin.com/in/ruan-lima-a945a127a/" target="_blank" rel="noopener noreferrer" class="font-nexa max-sm:font-light  text-slate-100 inline-flex items-center gap-1 max-sm:text-xs">
+                    <svg class="invert h-5 w-5 max-sm:h-4 max-sm:w-4">
                         <image href="/src/media/linkedin.png" width="100%" height="100%"></image>
                     </svg>Linkedin
                 </a>
             </button>
 
             <button id="copy-btn" onclick="copy_to_clipboard('ruanlimafn@gmail.com')" class="relative bg-slate-950 rounded-full px-5 py-2 items-center inline-flex gap-1 hover:-translate-y-1 hover:bg-black/67">
-                <svg class="invert h-5 w-5">
+                <svg class="invert h-5 w-5 max-sm:h-4 max-sm:w-4">
                     <image href="/src/media/email.png" width="100%" height="100%"></image>
                 </svg>
-                <h1 class="font-nexa text-slate-100">ruanlimafn@gmail.com</h1>
+                <h1 class="font-nexa max-sm:font-light  text-slate-100 max-sm:text-xs">ruanlimafn@gmail.com</h1>
                 <span id="copy-tooltip" class="absolute bottom-full left-1/2 transform -translate-x-1/2 mb-2 text-sm text-white bg-gray-800 rounded py-1 px-3 opacity-0 transition-opacity duration-300 delay-300 text-nowrap">
                     Clique para copiar
                 </span>
@@ -571,12 +571,12 @@
 
     <section class="bg-slate-900">
         <div class="flex text-center place-content-center mb-3">
-            <a href="https://github.com/ruanllima/portfolio" target="_blank" rel="noopener noreferrer" class="font-light text-slate-500 hover:underline underline-offset-2">Repository of this website.</a>
+            <a href="https://github.com/ruanllima/portfolio" target="_blank" rel="noopener noreferrer" class="font-light max-sm:text-xs text-slate-500 hover:underline underline-offset-2">Repository of this website.</a>
 
         </div>
 
         <footer class="bg-slate-950 text-center">
-            <p class="text-slate-300 font-coolvetica p-1">&copy; 2025 Ruan Lima. Todos os direitos reservados.</p>
+            <p class="text-slate-300 font-coolvetica p-1  max-sm:text-xs">&copy; 2025 Ruan Lima. Todos os direitos reservados.</p>
         </footer>
     </section>
 
