--- a/index.html
+++ b/index.html
@@ -257,12 +257,12 @@
                     Visualizar todos os certificados</button>
             </div>
 
-            <div id="certificados" class="flex place-content-center">
+            <div style="display: none;" id="certificados" class="flex place-content-center">
                 <div class="fixed inset-0 w-screen bg-black/70 flex items-center justify-center backdrop-blur-xs">
                 </div>
 
-                <div class="bg-slate-100 max-h-screen overflow-y-auto h-auto w-[76rem] max-sm:w-screen relative -mt-[550px] max-sm:-mt-[780px] px-16 max-sm:px-5 pt-12 max-sm:pt-15 pb-16 rounded-lg">
-                    <div  style="display: none;" id="certificados_list" class="grid grid-cols-4 max-sm:grid-cols-1 gap-8 mx-4">
+                <div class="bg-slate-100 max-h-screen overflow-y-auto h-[50rem] w-[76rem] max-sm:w-screen relative -mt-[550px] max-sm:-mt-[780px] px-16 max-sm:px-5 pt-12 max-sm:pt-15 pb-16 rounded-lg">
+                    <div  id="certificados_list" class="grid grid-cols-4 max-sm:grid-cols-1 gap-8 mx-4">
                         <img style="cursor: pointer;" id="nes" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_nes.jpg" alt="Programação Básica NES" class="certificado">
                         <img style="cursor: pointer;" id="slq1" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_sql1.jpg" alt="SQL DIO" class="certificado">
                         <img style="cursor: pointer;" id="python"  onclick="view_certificate(this.id)" src="/src/media/certificados/cert_python.jpg" alt="Ciência de Dados Python" class="certificado">
@@ -281,7 +281,7 @@
                         <img style="cursor: pointer;" id="eba" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_eba.jpg" alt="EBA 2024" class="certificado">
                         <img style="cursor: pointer;" id="startup2" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_startup2.jpg" alt="Startup Mundi Game Experience" class="certificado">
                     </div>
-                    <div id="view_container" class="flex place-content-center">
+                    <div style="display: none;" id="view_container" class="flex place-content-center">
                         <button id="left" onclick="change_certificate(this.id)"><img src="/src/media/seta.png" alt="" class="h-24 absolute top-64 max-sm:top-[430px] left-20 rotate-180 opacity-20 transition hover:opacity-30 hover:scale-110 hover:-translate-x-1"></button>
                         <button id="right" onclick="change_certificate(this.id)"><img src="/src/media/seta.png" alt="" class="h-24 absolute top-64 max-sm:top-[430px] right-20 opacity-20 transition hover:opacity-30 hover:scale-110 hover:translate-x-1"></button>
                         <img id="view" src="/src/media/certificados/cert_startup2.jpg" class="rounded-md h-[34rem] max-sm:h-full max-sm:pt-20">
