--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <!--Introduce-->
         <div class="flex place-content-center">
             <div class="grid grid-cols-1 text-center items-center">
-                <h1 id="intro1" class="max-sm:text-2xl text-3xl font-bold text-slate-900 mt-32">Olá! Meu nome é </h1>
+                <h1 id="intro1" class="max-sm:text-2xl text-3xl font-bold text-slate-900 mt-32 opacity-0">Olá! Meu nome é </h1>
                 <h1 id="intro2" class="max-sm:text-5xl mt-4 text-indigo-700 text-7xl font-extrabold opacity-0">RUAN LIMA</h1>
                 <h2 id="intro3" class="max-sm:text-lg max-sm:mx-10 text-slate-400 text-xl font-light mt-6 opacity-0">Algumas coisas que você precisa saber sobre mim:</h2>
             </div>
@@ -130,7 +130,7 @@
                     <p class="font-light text-slate-500 text-lg">Além disso, tive a oportunidade de competir em desafios de empreendedorismo, como o <span class="text-[#FF6D00] font-semibold text-base">Desafio Liga Jovem</span>, onde tive a experiência de desenvolver um jogo do zero, ao lado colegas da minha escola. Embora não me considere um desenvolvedor de jogos, essa vivência me permitiu explorar novas ferramentas como a Unity e a linguagem C#, agregando novos conhecimentos ao meu repertório técnico.
                     </p>
                 </div>
-                <img id="img_about2" src="/src/media/IMG2.jpg" alt="Trakto Show 2024" class="h-[30rem] rounded-lg opacity-0">
+                <img id="img_about2" src="/src/media/IMG2.jpg" alt="Trakto Show 2024" class="h-[30rem] max-sm:h-auto rounded-lg opacity-0">
 
             </div>
 
